--- a/styles/styles.css
+++ b/styles/styles.css
@@ -615,9 +615,22 @@ body {
 }
 
 .breadcrumbs-link {
+  position: relative;
+  display: block;
   color: inherit;
   text-decoration: none;
-  margin-right: 30px;
+  width: 21px;
+height: 21px;
+}
+
+.breadcrumbs-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+
 }
 
 .catalog-filter {
