--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,9 +74,44 @@ body {
   color: #FFFFFF;
 }
 
+.button-basic:hover {
+  background-color: #615048;
+}
+
+.button-basic:focus {
+  background-color: #615048;
+}
+
+.button-basic:active {
+  background-color: #756157;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button:disabled {
+  background-color: #E5E5E5;
+}
+
+.button:disabled:hover {
+  background-color: #E5E5E5;
+  cursor: default;
+}
+
 .button-additional {
   background-color: #82B3D3;
   color: #FFFFFF;
+}
+
+.button-additional:hover {
+  background-color: #68A2CA;
+}
+
+.button-additional:focus {
+  background-color: #68A2CA;
+}
+
+.button-additional:active {
+  background-color: #82B3D3;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .button-selected {
@@ -84,9 +119,17 @@ body {
   color: #FFFFFF;
 }
 
-.button-pagination-current {
-  background-color: #F2F2F2;
-  color: #000000;
+.button-selected:hover {
+  background-color: #6C9E42;
+}
+
+.button-selected:focus {
+  background-color: #6C9E42;
+}
+
+.button-selected:active {
+  background-color: #7DB54F;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .button-search {
@@ -134,7 +177,19 @@ body {
   border: 2px solid #E5E5E5;
 }
 
-.button-active {
+.button-view-active {
+  border: 2px solid #000000;
+}
+
+.button-view:hover {
+  border: 2px solid #000000;
+}
+
+.button-view:focus {
+  border: 2px solid #68A2CA;
+}
+
+.button-view:active {
   border: 2px solid #000000;
 }
 
@@ -171,6 +226,15 @@ body {
   line-height: 36px;
 }
 
+.pagination-item .button-additional {
+  border: 1px solid #82B3D3;
+}
+
+.button-pagination-current {
+  background-color: #F2F2F2;
+  color: #000000;
+}
+
 .image {
   object-fit: contain;
   max-width: 100%;
@@ -202,8 +266,11 @@ body {
   display: block;
   padding: 20px 17px 19px;
   font-weight: 700;
-  color: #000000;
   text-decoration: none;
+}
+
+.navigation-link:not(.button-basic) {
+  color: #000000;
 }
 
 .navigation-link-current {
@@ -214,10 +281,8 @@ body {
 }
 
 .navigation-link.button-basic {
-  color: #FFFFFF;
   min-width: 160px;
   padding: 9px 15px 8px;
-
 }
 
 .navigation-search {
@@ -617,8 +682,8 @@ body {
   display: block;
   color: inherit;
   text-decoration: none;
-  width: 21px;
-height: 21px;
+  min-width: 21px;
+min-height: 21px;
 }
 
 .breadcrumbs-icon {
