--- a/styles/styles.css
+++ b/styles/styles.css
@@ -328,6 +328,28 @@ body {
   background-image: url(../images/interface/heart.svg);
 }
 
+.navigation-item-favourite {
+  position: relative;
+}
+
+.navigation-item-favourite .navigation-link::after {
+  position: absolute;
+  top: 1px;
+  right: -6px;
+  width: 20px;
+  height: 20px;
+  background-color: #7DB54F;
+  border-radius: 10px;
+  content: "12";
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 18px;
+  color: #FFFFFF;
+  text-align: center;
+}
+
 .navigation-favourites {
   margin-left: auto;
 }
@@ -879,13 +901,17 @@ body {
   grid-template-areas:
     "price price"
     "more favourite"
-    ". ranking";
+    "stars ranking";
   row-gap: 16px;
   column-gap: 20px;
 }
 
 .hotel-card-image {
   margin-bottom: 16px;
+}
+
+.hotel-card-stars {
+  grid-area: stars;
 }
 
 .hotel-card-price {
