--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,6 +47,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
 
 .main-container {
@@ -349,6 +350,7 @@ body {
   font-weight: 400;
   font-size: 10px;
   line-height: 18px;
+  letter-spacing: -0.1em;
   color: #FFFFFF;
   text-align: center;
 }
@@ -750,7 +752,7 @@ body {
 .catalog-hotels {
   background-image: url("../images/filter_background.jpg");
   background-repeat: no-repeat;
-  background-color: #82B3D3;
+  background-color: #756157;
   width: 1060px;
   margin: 0 auto;
   margin-bottom: 5px;
@@ -820,6 +822,16 @@ body {
   margin: 0 auto;
 }
 
+.catalog-filter-group {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.catalog-filter-group legend {
+  font-weight: 700;
+}
+
 .filter-left {
   display: flex;
 }
@@ -836,9 +848,6 @@ body {
   margin: 0;
   padding: 0;
   list-style-type: none;
-}
-
-.catalog-filter-item {
   font-size: 18px;
   line-height: 21px;
 }
@@ -855,13 +864,62 @@ body {
   margin-bottom: 34px;
 }
 
-.catalog-filter-group {
-  padding: 0;
-  border: none;
+/* Control */
+.control {
+  position: relative;
+  display: block;
+  padding-left: 39px;
 }
 
-.catalog-filter-group legend {
-  font-weight: 700;
+/* Mark */
+.control-mark {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  background-color: #FFFFFF;
+  border-radius: 4px;
+}
+
+.control-accomodation .control-mark {
+  border-radius: 50%;
+}
+
+.control-infrastructure:hover .control-mark {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.control-infrastructure:focus .control-mark {
+  background-color: rgba(255, 255, 255, 0.6);
+  outline: 3px solid #83B3D3;
+}
+
+.control-infrastructure:active .control-mark {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+
+.control-accomodation:focus .control-mark {
+  box-shadow: inset 0 0 0 3px #83B3D3;
+
+}
+
+.control-input[type="radio"]:checked + .control-mark::before {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 10px;
+  background-color: #3F5E72;
+  border-radius: 50%;
+  content: "";
+}
+
+.control-input[type="checkbox"]:checked ~ .control-mark {
+  background-image: url("../images/tick/checkbox.svg");
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 /* Range */
@@ -881,7 +939,7 @@ body {
   position: absolute;
   width: 20px;
   height: 20px;
-  background: #FFFFFF;
+  background-color: #FFFFFF;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -946,7 +1004,7 @@ body {
 }
 
 .range-input:active {
-  background: #756257;
+  background-color: #756257;
 }
 
 .range-input::-webkit-outer-spin-button,
