--- a/styles/styles.css
+++ b/styles/styles.css
@@ -975,8 +975,6 @@ body {
 .range-wrapper-inputs {
   display: grid;
   grid-template-columns: 143px 144px;
-  font-size: 18px;
-  line-height: 21px;
   margin-bottom: 32px;
   border-radius: 4px;
 }
@@ -989,6 +987,11 @@ body {
   height: 48px;
   box-sizing: border-box;
   border: 2px solid #FFFFFF;
+}
+
+.range-input::placeholder {
+  font-size: 18px;
+  line-height: 21px;
 }
 
 .range-input:first-of-type {
@@ -1218,4 +1221,164 @@ body {
   padding-top: 12px;
   padding-bottom: 12px;
   box-sizing: border-box;
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+  z-index: 2;
+}
+
+.modal {
+  position: relative;
+  width: 575px;
+  margin: auto;
+  padding: 62px 70px 70px;
+  background-color: #ffffff;
+  box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 30px;
+}
+
+.modal-close-button {
+  position: absolute;
+  padding: 0;
+  top: 0;
+  right: 0;
+  width: 53px;
+  height: 53px;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 50%;
+  background-image: url("../images/interface/cross.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.modal-title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #000000;
+  margin-top: 0;
+  margin-bottom: 63px;
+}
+
+.search-form {
+  display: grid;
+  row-gap: 11px;
+}
+
+.search-container {
+  display: grid;
+  grid-template-columns: 1fr 420px;
+}
+
+.date {
+  grid-row: 1 / 3;
+}
+
+.date-form {
+  display: grid;
+  grid-template-columns: 1fr 53px;
+  border-radius: 4px;
+  font-size: 18px;
+line-height: 21px;
+color: #000000;
+}
+
+.date-form:focus {
+  outline: 3px solid #83B3D3;
+}
+
+.date-form:active {
+  outline: 2px solid #000000;;
+}
+
+.search-parameter {
+  font-weight: 700;
+  text-transform: capitalize;
+  color: #000000;
+  padding-top: 15px;
+}
+
+.modal-field {
+  padding: 15px 19px 14px;
+  border: none;
+  background-color: #F2F2F2;
+  border-radius: 4px;
+  font-size: 18px;
+line-height: 21px;
+color: #000000;
+}
+
+.select-number-form .modal-field {
+  padding-right: 0;
+  padding-left: 0;
+  border: none;
+  background-color: #F2F2F2;
+  border-radius: 4px;
+}
+
+.modal-button {
+  background-color: #F2F2F2;
+  padding: 18px 19px 17px;
+}
+
+.date-button {
+  background-image: url("../images/interface/date.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 53px;
+  height: 50px;
+}
+
+.modal-field::placeholder {
+  font-size: 18px;
+  line-height: 21px;
+  color: #000000;
+}
+
+.date-message {
+  font-size: 16px;
+  line-height: 21px;
+  color: #333333;
+  margin: 0;
+  padding-top: 8px;
+}
+
+.date-message-error {
+  color: #FF5757;
+}
+
+.tourists-number-form {
+  display: grid;
+  grid-template-columns: 133px 1fr 133px;
+  column-gap: 8px;
+}
+
+.select-number-form {
+  display: grid;
+  grid-template-columns: 53px 27px 53px;
+}
+
+.number-input {
+  -moz-appearance: textfield;
+  text-align: center;
+}
+
+.number-input::-webkit-outer-spin-button,
+.number-input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.children {
+  text-align: right;
 }
