--- a/styles/styles.css
+++ b/styles/styles.css
@@ -637,6 +637,11 @@ body {
   color: #000000;
 }
 
+.field:disabled {
+  background-color: #FFFFFF;
+  opacity: 0.3;
+}
+
 .footer-title-inner {
   color: #000000;
 }
@@ -1235,7 +1240,6 @@ body {
 }
 
 .modal {
-  position: relative;
   width: 575px;
   margin: auto;
   padding: 62px 70px 70px;
@@ -1245,13 +1249,13 @@ body {
 }
 
 .modal-title-container {
-  display: flex;
+  position: relative;
 }
 
 .modal-close-button {
   position: absolute;
   padding: 0;
-  top: 0;
+  top: -10px;
   right: 0;
   width: 53px;
   height: 53px;
@@ -1263,6 +1267,20 @@ body {
   background-position: center;
   cursor: pointer;
 }
+
+.modal-close-button:hover {
+  background-color: #E6E6E6;
+}
+
+.modal-close-button:focus {
+  background-color: #E6E6E6;
+  border: 3px solid #83B3D3;
+}
+
+.modal-close-button:active {
+  background-color: #E6E6E6;
+}
+
 
 .modal-title {
   font-weight: 700;
@@ -1413,8 +1431,8 @@ body {
 .minus-plus-button {
   display: flex;
   align-items: center;
-  padding-left: 14px;
-  padding-right: 14px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .sign-icon {
@@ -1444,4 +1462,19 @@ body {
   background-color: #83B3D3;
   padding-top: 12px;
   padding-bottom: 12px;
+}
+
+.button-search-modal:hover {
+  background-color: #68A2CA;
+}
+
+.button-search-modal:focus {
+  background-color: #68A2CA;
+  outline: 3px solid #756257;
+}
+
+.button-search-modal:active {
+  background-color: #68A2CA;
+  color: rgba(255, 255, 255, 0.3);
+
 }
