--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1391,7 +1391,7 @@ body {
 .tourists-number-form {
   display: grid;
   grid-template-columns: 133px 1fr 133px;
-  column-gap: 18px;
+  column-gap: 9px;
   font-size: 18px;
   line-height: 21px;
 }
@@ -1479,7 +1479,9 @@ body {
   color: rgba(255, 255, 255, 0.3);
 }
 
-.tooltip {}
+.tooltip {
+  padding: 9px;
+}
 
 .tooltip-toggle {
   position: relative;
@@ -1493,6 +1495,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
+
 }
 
 .form-label {
