--- a/styles/styles.css
+++ b/styles/styles.css
@@ -779,6 +779,7 @@ body {
 
 .breadcrumbs {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   margin-bottom: 40px;
   padding: 0;
@@ -848,10 +849,12 @@ body {
 
 .filter-left {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .filter-right {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .filter-infrastructure {
@@ -1050,6 +1053,7 @@ body {
 
 .sorting-buttons-container {
   display: flex;
+  flex-wrap: wrap;
   margin-left: auto;
 }
 
