--- a/styles/styles.css
+++ b/styles/styles.css
@@ -396,6 +396,7 @@ body {
   color: #000000;
   background-image: url("../images/welcome/welcome_divider.svg"), url("../images/welcome/welcome_background.jpg");
   width: 1200px;
+  background-size: cover;
   background-position: bottom, 0 0;
   background-repeat: no-repeat;
   background-color: rgba(131, 179, 211, 0.12);
@@ -598,6 +599,7 @@ body {
 .newsletter-index {
   background-image: url("../images/newsletter_background.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
   background-color: #82B3D3;
   color: #FFFFFF;
 }
@@ -779,6 +781,7 @@ body {
 .catalog-hotels {
   background-image: url("../images/filter_background.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
   background-color: #756157;
   width: 1060px;
   margin: 0 auto;
@@ -951,7 +954,7 @@ body {
   content: "";
 }
 
-.control-input[type="checkbox"]:checked~.control-mark {
+.control-input[type="checkbox"]:checked ~ .control-mark {
   background-image: url("../images/tick/checkbox.svg");
   background-position: center;
   background-repeat: no-repeat;
