Изменяет размер кнопок режима просмотра, меняет тип кнопки сброса на reset

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -187,7 +187,8 @@ body {
 
 .button-view {
   width: 48px;
-  height: 38px;
+  /*height: 38px;*/
+  height: 44px;
   color: #000000;
   background-color: #FFFFFF;
   padding: 14px 16px;
@@ -1075,6 +1076,7 @@ body {
 
 .results-sorting-container {
   display: flex;
+  align-items: center;
   margin-bottom: 60px;
 }
 
@@ -1110,8 +1112,9 @@ body {
   background-color: #FFFFFF;
   width: 287px;
   margin-right: 8px;
-  padding-right: 45px;
-  padding-left: 14px;
+  padding: 10px 45px 10px 14px;
+ /*padding-right: 45px;
+  padding-left: 14px;*/
   border: 2px solid #E5E5E5;
   border-radius: 4px;
   box-sizing: border-box;
