--- a/styles/styles.css
+++ b/styles/styles.css
@@ -187,7 +187,6 @@ body {
 
 .button-view {
   width: 48px;
-  /*height: 38px;*/
   height: 44px;
   color: #000000;
   background-color: #FFFFFF;
@@ -248,10 +247,6 @@ body {
   font-size: 20px;
   line-height: 36px;
 }
-
-/*.pagination-item .button-additional {
-  border: 1px solid #82B3D3;
-}*/
 
 .button-pagination-current {
   background-color: #F2F2F2;
@@ -678,13 +673,13 @@ body {
   flex-wrap: wrap;
   width: 1060px;
   margin: 0 auto;
-  padding: 45px 70px 35px;
-  justify-content: center;
+  padding: 45px 71px 35px 70px;
+  align-items: center;
 }
 
 .footer-social {
   max-width: 192px;
-  margin-right: auto;
+  margin-right: 238px;
 }
 
 .footer-social-link {
@@ -692,7 +687,7 @@ body {
   display: block;
   color: inherit;
   width: 42px;
-  height: 40px;
+  height: 34px;
 }
 
 .footer-social-icon {
@@ -738,6 +733,7 @@ body {
 .footer-phone {
   min-width: 331px;
   max-width: 420px;
+  margin-bottom: 7px;
 }
 
 .footer-contacts-phone {
@@ -766,6 +762,7 @@ body {
 .footer-htmlacademy {
   width: 120px;
   margin-left: auto;
+  margin-bottom: 7px;
 }
 
 .html-logo:hover {
@@ -822,8 +819,8 @@ body {
   display: block;
   color: inherit;
   text-decoration: none;
-  min-width: 21px;
-  min-height: 21px;
+  width: 13px;
+  height: 21px;
 }
 
 .breadcrumbs-link:hover {
@@ -837,12 +834,16 @@ body {
 
 .breadcrumbs-item:not(:last-child) {
   position: relative;
-  margin-right: 10px;
-  padding-right: 15px;
+  margin-right: 7px;
+  padding-right: 20px;
   background-image: url("../images/interface/breadcrumbs.svg");
   background-repeat: no-repeat;
-  background-position-x: 30px;
+  background-position-x: 23px;
   background-position-y: center;
+}
+
+.breadcrumbs-item {
+  position: relative;
 }
 
 .breadcrumbs-icon {
@@ -852,7 +853,6 @@ body {
   bottom: 0;
   left: 0;
   margin: auto;
-
 }
 
 .catalog-filter {
@@ -1097,7 +1097,7 @@ body {
 .catalog-results {
   width: 1056px;
   margin: 0 auto;
-  margin-bottom: 25px;
+  margin-bottom: 17px;
   padding-top: 50px;
 }
 
@@ -1140,8 +1140,6 @@ body {
   width: 287px;
   margin-right: 8px;
   padding: 10px 45px 10px 14px;
-  /*padding-right: 45px;
-  padding-left: 14px;*/
   border: 2px solid #E5E5E5;
   border-radius: 4px;
   box-sizing: border-box;
@@ -1260,11 +1258,13 @@ body {
 
 .hotels-amount {
   margin: 0;
+  margin-bottom: 8px;
   padding-right: 15px;
 }
 
 .button-hotels-amount {
   margin-left: auto;
+  margin-bottom: 8px;
   background-color: #FFFFFF;
   font-size: 18px;
   line-height: 21px;
@@ -1279,7 +1279,7 @@ body {
   appearance: none;
   background-image: url("../images/interface/arrow.svg");
   background-repeat: no-repeat;
-  background-position: 127px 16px;
+  background-position: 127px 18px;
 }
 
 .pagination {
@@ -1296,7 +1296,6 @@ body {
   justify-content: space-between;
   align-items: center;
   padding-top: 30px;
-  /*padding-bottom: 17px;*/
   border-top: 1px solid #E6E6E6;
 }
 
@@ -1304,7 +1303,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 2px;
+  margin-bottom: 8px;
 }
 
 .pagination-item:not(:last-child) {
