--- a/styles/styles.css
+++ b/styles/styles.css
@@ -629,7 +629,7 @@ body {
 .field {
   box-sizing: border-box;
   width: 600px;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   background-color: #F2F2F2;
@@ -639,7 +639,7 @@ body {
 }
 
 .field::placeholder {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   color: #000000;
   opacity: 0.6;
 }
@@ -1047,7 +1047,7 @@ body {
   -moz-appearance: textfield;
   padding: 14px 19px 13px;
   height: 48px;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   box-sizing: border-box;
@@ -1132,7 +1132,7 @@ body {
 }
 
 .select-control {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   background-color: #FFFFFF;
@@ -1438,7 +1438,7 @@ body {
   border: none;
   background-color: #F2F2F2;
   border-radius: 4px;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   color: #000000;
@@ -1473,7 +1473,7 @@ body {
 }
 
 .modal-field::placeholder {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   color: #000000;
